# glove80

./: .gitignore  .pre-commit-config.yaml  README.md  TUI_DESIGN.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/: STORE_API_COPY_KEY.md  TUI_CHECKLIST.md  TUI_IMPL_PLAN.md  UX_SPEC_FOOTER_NOTIFICATIONS.md  architecture.md  post.md  quantum_touch.md  tailorkey.md  tui_layout_sketch.md
layouts/default/: README.md
layouts/quantum_touch/: README.md
layouts/tailorkey/: README.md
scripts/: generate_layouts.py  generate_tailorkey_layouts.py  tui_snapshot_demo.py
sources/: quantum_touch_metadata.json
sources/variants/: bilateral_mac.json  bilateral_windows.json  dual.json  mac.json  windows.json
src/glove80/: __init__.py  base.py  metadata.py
src/glove80/cli/: __init__.py
src/tailorkey_builder/: base.py
tests/: assertions.py  conftest.py  test_autoshift_layer.py  test_bilateral_layers.py  test_builder.py  test_cli.py  test_cursor_layer.py  test_discovery.py  test_gaming_layer.py  test_generate_layouts.py  test_hrm_layers.py  test_lower_layer.py  test_magic_layer.py  test_mouse_layers.py  test_quantum_touch_layout.py  test_symbol_layer.py  test_typing_layer.py  utils.py
tests/default/: test_layouts.py
tests/glorious_engrammer/: test_layout.py
tests/quantum_touch/: test_layout.py
tests/tailorkey/: test_autoshift_layer.py  test_bilateral_layers.py  test_cursor_layer.py  test_gaming_layer.py  test_generate_layouts.py  test_hrm_layers.py  test_lower_layer.py  test_magic_layer.py  test_mouse_layers.py  test_symbol_layer.py  test_typing_layer.py
(+135 files in other folders)
