[project]
name = "glove80"
version = "0.1.0"
description = "Deterministic Glove80 layout toolkit"
readme = "README.md"
authors = [
    { name = "Bas Nijholt", email = "bas@nijho.lt" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.5",
]

[project.scripts]
glove80 = "glove80.cli:app"

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glove80"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 120
